force-app/main/default/objects/Account/fields/ACDF_Company__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Company__c</fullName>
    <label>ACDF Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>