force-app/main/default/objects/Account/fields/ACDF_Fname__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Fname__c</fullName>
    <label>ACDF Fname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>