force-app/main/default/objects/Account/fields/ACDF_Lic_Num__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lic_Num__c</fullName>
    <label>ACDF Lic Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>