force-app/main/default/objects/Account/fields/ACDF_Lic_Type__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lic_Type__c</fullName>
    <label>ACDF Lic Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FINRA</fullName>
            </value>
            <value>
                <fullName>SEC</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>