force-app/main/default/objects/Account/fields/ACDF_Lname__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lname__c</fullName>
    <label>ACDF Lname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>