force-app/main/default/objects/Account/fields/ACDF_Primary__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Primary__c</fullName>
    <label>ACDF Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Planning</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Taxation</fullName>
            </value>
            <value>
                <fullName>Estate Planning</fullName>
            </value>
            <value>
                <fullName>Business Planning</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Trust Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>