force-app/main/default/objects/Account/fields/ACDF_WF_Channel__c.field-meta.xml
<CustomField>
    <fullName>ACDF_WF_Channel__c</fullName>
    <label>ACDF WF Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>