force-app/main/default/objects/Account/fields/ACT_2nd_Last_Reach__c.field-meta.xml
<CustomField>
    <fullName>ACT_2nd_Last_Reach__c</fullName>
    <label>ACT 2nd Last Reach</label>
    <type>Date</type>
</CustomField>