force-app/main/default/objects/Account/fields/ACT_ACDF_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_ACDF_Return_Date__c</fullName>
    <description>This was the last time the contact filled out their form in ACT.  This field is now tracked on the Opportunity.</description>
    <inlineHelpText>This was the last time the contact filled out their form in ACT.  This field is now tracked on the Opportunity.</inlineHelpText>
    <label>ACDF Return Date</label>
    <type>Date</type>
</CustomField>