force-app/main/default/objects/Account/fields/ACT_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Created_Date__c</fullName>
    <label>ACT Created Date</label>
    <type>Date</type>
</CustomField>