force-app/main/default/objects/Account/fields/ACT_Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>ACT_Disposition_Status__c</fullName>
    <description>This is the historical ACT Client Disposition Status.  In Salesforce, this information is on the Opportunity.</description>
    <inlineHelpText>This is the historical ACT Client Disposition Status.  In Salesforce, this information is on the Opportunity.</inlineHelpText>
    <label>ACT Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alive</fullName>
            </value>
            <value>
                <fullName>Dead - Company doesn&apos;t allow participation</fullName>
            </value>
            <value>
                <fullName>Dead - Connected but no story</fullName>
            </value>
            <value>
                <fullName>Dead - Cost/Price/Budget</fullName>
            </value>
            <value>
                <fullName>Dead - Did not connect</fullName>
            </value>
            <value>
                <fullName>Dead - MPS interest</fullName>
            </value>
            <value>
                <fullName>Dead - Didn&apos;t work</fullName>
            </value>
            <value>
                <fullName>Dead - No contact info</fullName>
            </value>
            <value>
                <fullName>Dead - No value</fullName>
            </value>
            <value>
                <fullName>Dead - Not my plan</fullName>
            </value>
            <value>
                <fullName>Dead - Scam</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>