force-app/main/default/objects/Account/fields/ACT_Edit_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Edit_Date__c</fullName>
    <label>ACT Edit Date</label>
    <type>Date</type>
</CustomField>