force-app/main/default/objects/Account/fields/ACT_FSP_Sales_Rep_LY__c.field-meta.xml
<CustomField>
    <fullName>ACT_FSP_Sales_Rep_LY__c</fullName>
    <description>This is a historical record of the penultimate sales rep assigned to this person in ACT.  Note that this functionality is replaced by Opportunity FSP Sales Rep tracking.</description>
    <inlineHelpText>This is a historical record of the penultimate sales rep assigned to this person in ACT.  Note that this functionality is replaced by Opportunity FSP Sales Rep tracking.</inlineHelpText>
    <label>FSP Sales Rep LY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>