force-app/main/default/objects/Account/fields/ACT_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Import_Date__c</fullName>
    <label>ACT Import Date</label>
    <type>Date</type>
</CustomField>