force-app/main/default/objects/Account/fields/ACT_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>ACT_Last_Attempt__c</fullName>
    <label>ACT Last Attempt</label>
    <type>Date</type>
</CustomField>