force-app/main/default/objects/Account/fields/ACT_Last_Edited_By__c.field-meta.xml
<CustomField>
    <fullName>ACT_Last_Edited_By__c</fullName>
    <label>ACT Last Edited By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>