force-app/main/default/objects/Account/fields/ACT_Last_Email__c.field-meta.xml
<CustomField>
    <fullName>ACT_Last_Email__c</fullName>
    <label>ACT Last Email</label>
    <type>Date</type>
</CustomField>