force-app/main/default/objects/Account/fields/ACT_Last_Reach__c.field-meta.xml
<CustomField>
    <fullName>ACT_Last_Reach__c</fullName>
    <label>ACT Last Reach</label>
    <type>Date</type>
</CustomField>