force-app/main/default/objects/Account/fields/ACT_Sales_Goals_Achieved__c.field-meta.xml
<CustomField>
    <fullName>ACT_Sales_Goals_Achieved__c</fullName>
    <description>This is the Sales Goals Achieved Data from ACT.  In Salesforce this information is kept on the Opportunity.</description>
    <inlineHelpText>This is the Sales Goals Achieved Data from ACT.  In Salesforce this information is kept on the Opportunity.</inlineHelpText>
    <label>ACT Sales Goals Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1- Congratulations</fullName>
            </value>
            <value>
                <fullName>2- Research</fullName>
            </value>
            <value>
                <fullName>3-Magazine/Section</fullName>
            </value>
            <value>
                <fullName>4-Value Proposition/Examples</fullName>
            </value>
            <value>
                <fullName>5-Qualify/Learn</fullName>
            </value>
            <value>
                <fullName>6-Make recommendation</fullName>
            </value>
            <value>
                <fullName>7-Review Award Guide</fullName>
            </value>
            <value>
                <fullName>8-Send Proposal</fullName>
            </value>
            <value>
                <fullName>9-Close/On the clock</fullName>
            </value>
            <value>
                <fullName>10-Closed Won</fullName>
            </value>
            <value>
                <fullName>Dead - Company doesn&apos;t allow participation</fullName>
            </value>
            <value>
                <fullName>Dead - Connected but no story</fullName>
            </value>
            <value>
                <fullName>Dead - Cost/Price/Budget</fullName>
            </value>
            <value>
                <fullName>Dead - Did not connect</fullName>
            </value>
            <value>
                <fullName>Dead - MPS interest</fullName>
            </value>
            <value>
                <fullName>Dead - Didn&apos;t work</fullName>
            </value>
            <value>
                <fullName>Dead - No contact info</fullName>
            </value>
            <value>
                <fullName>Dead - No value</fullName>
            </value>
            <value>
                <fullName>Dead - Not my plan</fullName>
            </value>
            <value>
                <fullName>Dead - Scam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>