force-app/main/default/objects/Account/fields/billing_address_2__c.field-meta.xml
<CustomField>
    <fullName>billing_address_2__c</fullName>
    <label>office_address_2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>