force-app/main/default/objects/Account/fields/billing_address__c.field-meta.xml
<CustomField>
    <fullName>billing_address__c</fullName>
    <label>office_address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>