force-app/main/default/objects/Account/fields/billing_city__c.field-meta.xml
<CustomField>
    <fullName>billing_city__c</fullName>
    <label>office_city</label>
    <length>50</length>
    <type>Text</type>
</CustomField>