force-app/main/default/objects/Account/fields/billing_state__c.field-meta.xml
<CustomField>
    <fullName>billing_state__c</fullName>
    <label>office_state</label>
    <length>2</length>
    <type>Text</type>
</CustomField>