force-app/main/default/objects/Account/fields/billing_zip__c.field-meta.xml
<CustomField>
    <fullName>billing_zip__c</fullName>
    <label>office_zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>