force-app/main/default/objects/Account/fields/Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Broker_Dealer__c</fullName>
    <formula>Company__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Dealer</label>
    <type>Text</type>
</CustomField>