force-app/main/default/objects/Account/fields/Company_Specific_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Company_Specific_Disclosure__c</fullName>
    <description>Company-specific disclosure language required by this company, in addition to any FSP disclosures already present.</description>
    <inlineHelpText>Company-specific disclosure language required by this company, in addition to any FSP disclosures already present.</inlineHelpText>
    <label>Company Specific Disclosure</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>