force-app/main/default/objects/Account/fields/Compliance_First_name__c.field-meta.xml
<CustomField>
    <fullName>Compliance_First_name__c</fullName>
    <label>Compliance First name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>