force-app/main/default/objects/Account/fields/Credit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Risk</label>
    <type>Checkbox</type>
</CustomField>