force-app/main/default/objects/Account/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>AIF</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>CFP</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>ChFC</fullName>
            </value>
            <value>
                <fullName>CIC</fullName>
            </value>
            <value>
                <fullName>CIMA</fullName>
            </value>
            <value>
                <fullName>CLU</fullName>
            </value>
            <value>
                <fullName>CMFC</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>CRPC</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>PFS</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>