force-app/main/default/objects/Account/fields/Dual_Market__c.field-meta.xml
<CustomField>
    <fullName>Dual_Market__c</fullName>
    <label>Dual Market</label>
    <length>25</length>
    <type>Text</type>
</CustomField>