force-app/main/default/objects/Account/fields/ext__c.field-meta.xml
<CustomField>
    <fullName>ext__c</fullName>
    <label>ext.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>