force-app/main/default/objects/Account/fields/Firm_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Approval_Type__c</fullName>
    <label>Firm Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>