force-app/main/default/objects/Account/fields/forcebrain__IsPersonalAccount__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__IsPersonalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>