force-app/main/default/objects/Account/fields/forcebrain__IsProvider__c.field-meta.xml
<CustomField>
    <fullName>forcebrain__IsProvider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Provider</label>
    <type>Checkbox</type>
</CustomField>