force-app/main/default/objects/Account/fields/FORMULA_Credit_Risk__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Credit_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FORMULA Credit Risk</label>
    <type>Checkbox</type>
</CustomField>