force-app/main/default/objects/Account/fields/FORMULA_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is populated by a workflow from the visible do not call checkbox</inlineHelpText>
    <label>FORMULA Do Not Call</label>
    <type>Checkbox</type>
</CustomField>