force-app/main/default/objects/Account/fields/FORMULA_Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is populated by a workflow from the visible Do Not Email checkbox.</inlineHelpText>
    <label>FORMULA Do Not Email</label>
    <type>Checkbox</type>
</CustomField>