force-app/main/default/objects/Account/fields/FSP_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>FSP_Sales_Rep__c</fullName>
    <description>Historical - the most recent sales rep assigned to this person.  NOTE that this function now exists on the Opportunity instead.</description>
    <inlineHelpText>Historical - the most recent sales rep assigned to this person.  NOTE that this function now exists on the Opportunity instead.</inlineHelpText>
    <label>FSP Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>