force-app/main/default/objects/Account/fields/HIDDEN_Asst_Email__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Asst_Email__c</fullName>
    <label>HIDDEN Asst. Email</label>
    <type>Email</type>
</CustomField>