force-app/main/default/objects/Account/fields/HIDDEN_Asst_Phone__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Asst_Phone__c</fullName>
    <label>HIDDEN Asst. Phone</label>
    <type>Phone</type>
</CustomField>