force-app/main/default/objects/Account/fields/HIDDEN_Email_2__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Email_2__c</fullName>
    <label>HIDDEN Email 2</label>
    <type>Email</type>
</CustomField>