force-app/main/default/objects/Account/fields/HIDDEN_Email__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Email__c</fullName>
    <label>HIDDEN Email</label>
    <type>Email</type>
</CustomField>