force-app/main/default/objects/Account/fields/HIDDEN_ext__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_ext__c</fullName>
    <label>HIDDEN ext.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>