force-app/main/default/objects/Account/fields/HIDDEN_Fax__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Fax__c</fullName>
    <label>HIDDEN Fax</label>
    <type>Phone</type>
</CustomField>