force-app/main/default/objects/Account/fields/HIDDEN_Mobile__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Mobile__c</fullName>
    <label>HIDDEN Mobile</label>
    <type>Phone</type>
</CustomField>