force-app/main/default/objects/Account/fields/HIDDEN_Phone__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Phone__c</fullName>
    <label>HIDDEN Phone</label>
    <type>Phone</type>
</CustomField>