force-app/main/default/objects/Account/fields/hidden_title_for_Opportunity_formula__c.field-meta.xml
<CustomField>
    <fullName>hidden_title_for_Opportunity_formula__c</fullName>
    <formula>PersonTitle</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hidden title for Opportunity formula</label>
    <type>Text</type>
</CustomField>