force-app/main/default/objects/Account/fields/kugadd__DisableBillingShippingAddressSync__c.field-meta.xml
<CustomField>
    <fullName>kugadd__DisableBillingShippingAddressSync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the automatic sync function is disabled with the Billing Address and Shipping Address fields. 

If unchecked, the Shipping Address fields are automatically updated when the Billing Address has been updated and was previously in sync.</inlineHelpText>
    <label>Disable Billing/Shipping Address Sync</label>
    <type>Checkbox</type>
</CustomField>