force-app/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>