force-app/main/default/objects/Account/fields/Most_Recent_CRMA_Owner__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CRMA_Owner__c</fullName>
    <label>Most Recent CRMA Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>