force-app/main/default/objects/Account/fields/MPS_Rep__c.field-meta.xml
<CustomField>
    <fullName>MPS_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MPS Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Winners</relationshipName>
    <type>Lookup</type>
</CustomField>