force-app/main/default/objects/Account/fields/opps__c.field-meta.xml
<CustomField>
    <fullName>opps__c</fullName>
    <label>opps</label>
    <summarizedField>Opportunity.formula_one__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>